@@ -1033,6 +1033,8 @@ typedef struct LiveObject {
         int lastMonumentID;
         char monumentPosSent;
         
+        char monumentPosInherited;
+        
 
         char holdingFlightObject;
         
@@ -9600,6 +9602,8 @@ int processLoggedInPlayer( int inAllowOrForceReconnect,
     newObject.monumentPosSet = false;
     newObject.monumentPosSent = true;
     
+    newObject.monumentPosInherited = false;
+
     newObject.holdingFlightObject = false;
 
     newObject.vogMode = false;
@@ -9649,12 +9653,20 @@ int processLoggedInPlayer( int inAllowOrForceReconnect,
         // mother
         newObject.lineage->push_back( newObject.parentID );
 
+
         // inherit last heard monument, if any, from parent
-        newObject.monumentPosSet = parent->monumentPosSet;
-        newObject.lastMonumentPos = parent->lastMonumentPos;
-        newObject.lastMonumentID = parent->lastMonumentID;
-        if( newObject.monumentPosSet ) {
-            newObject.monumentPosSent = false;
+
+        // but only if parent heard the monument call directly, not if THEY
+        // also inherited it
+        // Don't keep propagating across multiple generations.
+        if( ! parent->monumentPosInherited ) {
+            newObject.monumentPosSet = parent->monumentPosSet;
+            newObject.lastMonumentPos = parent->lastMonumentPos;
+            newObject.lastMonumentID = parent->lastMonumentID;
+            if( newObject.monumentPosSet ) {
+                newObject.monumentPosSent = false;
+                newObject.monumentPosInherited = true;
+                }
             }
         
         
